# gen_tech_task

./: README.md  pyproject.toml
gen_tech_task/: cli.py  data_process.py
tests/: test_package.py
