[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gen_tech_task"
version = "0.1"
description = "Package for loading gene expressions and calculating metrics (ie. progeny) - for Genialis tech task"
readme = "README.md"
requires-python = ">=3.8, <3.13"
license = { file = "LICENSE" }
authors = [
    {name = "Tine Makovecki", email = "tine.makovecki@gmail.com" },
]
dependencies = [
    "pandas",
    "resdk",
    "click",
    "decoupler",
    "omnipath"
]

[project.scripts]
progeny = "gen_tech_task.cli:progeny"


[project.optional-dependencies]
dev = [
    "build",
    "black",
    "pylint>=2.14.0",
    "pytest",
    "twine",
]

[tool.black]
line-length = 120
preview = true
